2008-02-09  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs, Mono.TextEditor/Caret.cs: Overwrite mode
	  now works.

2008-02-09  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fixed caret drawing bug (occurred when
	  caret was in line with foldings).

2008-02-08  Mike Krüger <mkrueger@novell.com> 

	* TangoLightStyle.xml, OblivionStyle.xml, UbuntuStyle.xml,
	  Mono.TextEditor.Highlighting/Style.cs,
	  Mono.TextEditor.Highlighting/DefaultStyle.cs, C64Style.xml: Style names
	  are not localized anymore (but descriptions are).

2008-02-08  Mike Krüger <mkrueger@novell.com> 

	* UbuntuStyle.xml: Added ubuntu style (but it could need some improvements).

2008-02-08  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/DefaultStyle.cs: Changed default style
	  (folding on mouse over).

2008-02-08  Mike Krüger <mkrueger@novell.com> 

	* XmlSyntaxMode.xml: Worked on xml syntax highlighting

2008-02-08  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: removed some redraws.

2008-02-08  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/LineSplitter.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: Fixed highlighting
	  bug.

2008-02-07  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs, Mono.TextEditor/TextEditorOptions.cs: Color
	  styles are now in options.

2008-02-06  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Worked on printing.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/FoldingType.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/FoldSegment.cs: Added
	  some folding commands.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/Caret.cs, Mono.TextEditor/FoldSegment.cs: Improved